// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`owners-known GET /change should render the change owners known page with "No" radio option checked if knowsOtherLandowners is "No" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant know who owns the land involved in the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio" name="ownersKnownRadio"
                                        type="radio" value="Yes">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-2" name="ownersKnownRadio"
                                        type="radio" value="No" checked>
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-2">No</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-3" name="ownersKnownRadio"
                                        type="radio" value="Some">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-3">Some of the land</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-4" name="ownersKnownRadio"
                                        type="radio" value="not-applicable">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-4">Not applicable</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`owners-known GET /change should render the change owners known page with "Some" radio option checked if knowsOtherLandowners is "Some" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant know who owns the land involved in the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio" name="ownersKnownRadio"
                                        type="radio" value="Yes">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-2" name="ownersKnownRadio"
                                        type="radio" value="No">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-2">No</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-3" name="ownersKnownRadio"
                                        type="radio" value="Some" checked>
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-3">Some of the land</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-4" name="ownersKnownRadio"
                                        type="radio" value="not-applicable">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-4">Not applicable</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`owners-known GET /change should render the change owners known page with "Yes" radio option checked if knowsOtherLandowners is "Yes" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant know who owns the land involved in the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio" name="ownersKnownRadio"
                                        type="radio" value="Yes" checked>
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-2" name="ownersKnownRadio"
                                        type="radio" value="No">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-2">No</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-3" name="ownersKnownRadio"
                                        type="radio" value="Some">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-3">Some of the land</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-4" name="ownersKnownRadio"
                                        type="radio" value="not-applicable">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-4">Not applicable</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`owners-known GET /change should render the change owners known page with "not applicable" radio option checked if knowsOtherLandowners is null 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant know who owns the land involved in the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio" name="ownersKnownRadio"
                                        type="radio" value="Yes">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-2" name="ownersKnownRadio"
                                        type="radio" value="No">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-2">No</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-3" name="ownersKnownRadio"
                                        type="radio" value="Some">
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-3">Some of the land</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="owners-known-radio-4" name="ownersKnownRadio"
                                        type="radio" value="not-applicable" checked>
                                        <label class="govuk-label govuk-radios__label" for="owners-known-radio-4">Not applicable</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
